# pluralizefr

./: .gitignore  CHANGES.rst  LICENSE  Makefile  README  README.rst  TODO  pyproject.toml  setup.py
pluralizefr/: __init__.py
tests/: pluralize_tests.py
